# Stock-Management-CPP

./: CMakeLists.txt  main.cpp
include/: invoice.h  item.h  product.h  service.h  storage.h
src/: invoice.cpp  item.cpp  product.cpp  run.cpp  service.cpp  storage.cpp
